Updates to prevent horizontal scrolling

--- a/source/stylesheets/modules/_navigation.scss
+++ b/source/stylesheets/modules/_navigation.scss
@@ -4,6 +4,7 @@
   margin-left: $xl;
   margin-right: $xl;
   height: 6em;
+  overflow: hidden;
 }
 
 .nav__list {
